--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="icon" type="https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/ifsp.png" href="favicon.png">
     <meta charset="UTF-8" />
    <img src='https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/Logo.jpg' />
 
   </head>
 
   <body>
-   <p><b>Eventos</b></p>
+   <h4><b>Eventos</b></h4>
+    
       <img src=https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/SEJA_RARO.jpg />
-    <p>Aniversário do IFSP - Pirituba - Palestra Augusto Aielo</p>
+    <h1>Aniversário do IFSP - Pirituba - Palestra Augusto Aielo</h1>
+
+    <h2><b>Sobre a Biblioteca</b></h2>
+    <img src=https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/library.jpeg  />
+
+    <h2><b>Conheça os novos títulos disponíveis na nossa biblioteca</b></h2>
+
+     <h2><b>Publicado: Quarta-feira, 14 de agosto de 2019</b></h2>
+
+    <h2><b>Conheça o SUAP</b></h2>
   </body>
   
 </html>
