--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="icon" type="https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/ifsp.png" href="favicon.png">
+   <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/ifsp.png">
     <meta charset="UTF-8" />
-   <img src='https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/Logo.jpg' />
+ <img src='https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/Logo.jpg' />
 
   </head>
 
   <body>
    <h4><b>Eventos</b></h4>
     
-        <img src=https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/SEJA_RARO.jpg />
-        <h5>Aniversário do IFSP - Pirituba - Palestra Augusto Aielo</h5>
+         <center><img src=https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/SEJA_RARO.jpg /><center>
+         <center><h5>Aniversário do IFSP - Pirituba - Palestra Augusto Aielo</h5><center>
 
     <h2><b>Sobre a Biblioteca</b></h2>
     <img src=https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/library.jpeg  />
