--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
    <h4><b>Eventos</b></h4>
     
-         <center><img src=https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/SEJA_RARO.jpg /><center>
-         <center><h5>Aniversário do IFSP - Pirituba - Palestra Augusto Aielo</h5><center>
+         <img src=https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/SEJA_RARO.jpg />
+         <h5>Aniversário do IFSP - Pirituba - Palestra Augusto Aielo</h5>
 
     <h2><b>Sobre a Biblioteca</b></h2>
     <img src=https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/library.jpeg  />
