--- a/index.html
+++ b/index.html
@@ -8,11 +8,19 @@
   </head>
 
   <body>
-   <h4><b>Eventos</b></h4>
-    
-         <img src=https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/SEJA_RARO.jpg />
-         <h5>Aniversário do IFSP - Pirituba - Palestra Augusto Aielo</h5>
+    <center>
+    <table width="70%">
+        <tr>
+            <td align="center">
+                <h2>Eventos</h2>
+                 <img src=https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/SEJA_RARO.jpg />
+                 <h5>Aniversário do IFSP - Pirituba - Palestra Augusto Aielo</h5>
+            </td>
+        </tr>
+    </table>
+</center>
 
+        
     <h2><b>Sobre a Biblioteca</b></h2>
     <img src=https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/library.jpeg  />
 
