--- a/index.html
+++ b/index.html
@@ -22,13 +22,12 @@
 
     <h2><b>Conheça o SUAP</b></h2>
 
-    <iframe width="560" height="315" 
-    src="https://www.youtube.com/embed/1egUfDkqkaA" 
-    title="YouTube video player" 
-    frameborder="0" 
-    allowfullscreen>
-      
-</iframe>
+
+     <img src=https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/MoveTop.png /> | <a href="https://www.facebook.com/ifsppirituba">
+    <img src="https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/facebook.png" />
+</a>
+
+
   </body>
   
 </html>
