--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <h4><b>Eventos</b></h4>
     
          <img src=https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/SEJA_RARO.jpg />
-         <h5>Aniversário do IFSP - Pirituba - Palestra Augusto Aielo</h5>
+         <p>Aniversário do IFSP - Pirituba - Palestra Augusto Aielo</p>
 
     <h2><b>Sobre a Biblioteca</b></h2>
     <img src=https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/library.jpeg  />
@@ -23,11 +23,11 @@
     <h2><b>Conheça o SUAP</b></h2>
 
 
-     <img src=https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/MoveTop.png /> | <a href="https://www.facebook.com/ifsppirituba">
+     <img src=https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/MoveTop.png /> <p>|</p> <a> href="https://www.facebook.com/ifsppirituba">
     <img src="https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/facebook.png" />
 </a>
 
-     <h4>IFSP - Câmpus Pirituba - Av. Mutinga, 951 - Jardim Santo Elias - CEP: 05110-000 - São Paulo/SP - Contato: (011) 2504-0100/<h4>
+     <p>IFSP - Câmpus Pirituba - Av. Mutinga, 951 - Jardim Santo Elias - CEP: 05110-000 - São Paulo/SP - Contato: (011) 2504-0100/</p>
        
   </body>
   
