--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
         </div>
 
 
-    <div class="icons">
-    <a href="#"><img class="icon" src="https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/MoveTop.png" alt="Voltar ao topo"></a>
-    <a href="https://www.facebook.com/ifsppirituba"><img class="icon" src="https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/facebook.png" alt="Facebook"></a>
-</div>
+    <img src=https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/MoveTop.png /> <p>|</p> <a href="https://www.facebook.com/ifsppirituba">
+    <img src="https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/facebook.png" />
+</a>
 
      <p>IFSP - Câmpus Pirituba - Av. Mutinga, 951 - Jardim Santo Elias - CEP: 05110-000 - São Paulo/SP - Contato: (011) 2504-0100/</p>
        
