--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     <h2><b>Conheça o SUAP</b></h2>
 
      <div class="video-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/yVbOcB1ryh0" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/yVbOcB1ryh0"
+              frameborder="0" allowfullscreen></iframe>
         </div>
 
-
-    <img src=https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/MoveTop.png /> <p>|</p> <a href="https://www.facebook.com/ifsppirituba">
-    <img src="https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/facebook.png" />
+<div class="icons">
+    <img src=https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/MoveTop.png > <p>|</p>  <a href="https://www.facebook.com/ifsppirituba"> <img src="https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/facebook.png" >
 </a>
-
+</div>
      <p>IFSP - Câmpus Pirituba - Av. Mutinga, 951 - Jardim Santo Elias - CEP: 05110-000 - São Paulo/SP - Contato: (011) 2504-0100/</p>
        
   </body>
