--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/ifsp.png">
     <meta charset="UTF-8" />
- <img src='https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/Logo.jpg' />
 
   </head>
 
   <body>
+    <img src='https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/Logo.jpg' />
    <h4><b>Eventos</b></h4>
     
-         <img src=https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/SEJA_RARO.jpg />
+         <img class="evento-img" src=https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/SEJA_RARO.jpg />
          <p>Aniversário do IFSP - Pirituba - Palestra Augusto Aielo</p>
 
     <h2><b>Sobre a Biblioteca</b></h2>
