--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 
   <body>
     <img src='https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/Logo.jpg' />
-   <h4><b>Eventos</b></h4>
+   <h3><b>Eventos</b></h3>
     
-         <img class="evento-img" src=https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/SEJA_RARO.jpg />
-         <p>Aniversário do IFSP - Pirituba - Palestra Augusto Aielo</p>
+         <div align="center">
+    <img width="300" src="https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/SEJA_RARO.jpg" />
+    <br>
+    Aniversário do IFSP - Pirituba - Palestra Augusto Aielo
+</div>
+        
 
     <h2><b>Sobre a Biblioteca</b></h2>
     <img src=https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/library.jpeg  />
