--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <img src='https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/Logo.jpg' />
    <h3><b>Eventos</b></h3>
     
-         <div align="center">
-    <img width="300" src="https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/SEJA_RARO.jpg" />
+   <div>
+    <img src="https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/SEJA_RARO.jpg" />
     <br>
     Aniversário do IFSP - Pirituba - Palestra Augusto Aielo
 </div>
