--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <img src='https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/Logo.jpg' />
    <h3><b>Eventos</b></h3>
     
-    <img class="evento-img" src=https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/SEJA_RARO.jpg />
+    <img src='https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/SEJA_RARO.jpg' />
              <br>Aniversário do IFSP - Pirituba - Palestra Augusto Aielo
         
 
