--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <img src='https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/Logo.jpg' />
    <h3><b>Eventos</b></h3>
     
-    <img src='https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/SEJA_RARO.jpg' />
-             <br>Aniversário do IFSP - Pirituba - Palestra Augusto Aielo
-        
+   <div style="text-align: left;">
+    <img src="https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/SEJA_RARO.jpg" width="400">
+    <p>Aniversário do IFSP - Pirituba - Palestra Augusto Aielo</p>
+</div>
 
     <h2><b>Sobre a Biblioteca</b></h2>
     <img src=https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/library.jpeg  />
