--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <h3><b>Eventos</b></h3>
     
    <div style="text-align: left;">
-    <img src="https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/SEJA_RARO.jpg" width="400">
+    <img src="https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/SEJA_RARO.jpg" width="4001 width="300" height="200">
     <p>Aniversário do IFSP - Pirituba - Palestra Augusto Aielo</p>
 </div>
 
