--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
    <h3><b>Eventos</b></h3>
     
    <div style="text-align: left;">
-    <img src="https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/SEJA_RARO.jpg">
-    <p>Aniversário do IFSP - Pirituba - Palestra Augusto Aielo</p>
+    <img src="https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/SEJA_RARO.jpg" style="width: 50%;">
+    <br>Aniversário do IFSP - Pirituba - Palestra Augusto Aielo
 </div>
 
     <h2><b>Sobre a Biblioteca</b></h2>
