--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
    <h2><b>Eventos</b></h2>
     
  
+  <div style="width: fit-content;">
     <img src="https://raw.githubusercontent.com/DWBA4/dwba4_semana_imagens/77770610c0de515c6150e899d70445ff3d25094d/SEJA_RARO.jpg" 
          style="width: 50%; display: block;">
-    <p>Aniversário do IFSP - Pirituba - Palestra Augusto Aielo</p>
+    <p style="margin: 0; padding: 0;">Aniversário do IFSP - Pirituba - Palestra Augusto Aielo</p>
+</div>
+
 
 
 
